--- a/Doc/Bachelor Thesis/anotation.tex
+++ b/Doc/Bachelor Thesis/anotation.tex
@@ -22,7 +22,7 @@ Vedúci práce: \Supervisor \\
 \Month \Year \\
 \noindent
 \\
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum....
+Sme zavalení množstvom informácií z rôznych zdrojov. Vo výučbe je náročné vytvoriť poznámky, ktoré zahŕňajú podmnožinu dôležitých informácií zo zdroja. Existuje niekoľko spôsobov, ako extrahovať informácie z textu. V tejto práci navrhujeme systém na extrakciu poznámok z textu, ktoré sú dôležité z pohľadu výučby, a bude umožní študentom vytvárať si personalizované poznámky. Využívame hlavne syntaktickú analýzu textu. Poznámky sa vytvárajú pomocou využitie značiek slovných druhov a závislostí medzi slovami vo vetách. Výsledkom je interaktívny systém na tvorbu poznámok, na základe pravidiel naučených od používateľa.
 \newpage
 \thispagestyle{plain}
 \begin{center}
@@ -47,4 +47,5 @@ Supervisor: \Supervisor \\
 \Month \Year \\
 \noindent
 \\
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum....
+We are overwhelmed by information from various topics. The challenge in education is to create notes which covers important subset of information. There are known methods to extract information from text. In this
+thesis we propose a system to extract the notes from text which are important for educational purpose, so it should create personalized notes for students. We use mainly syntactic text analysis. Notes are created by help of part-of-speech tags and dependencies between words in sentences. The outcome is an interactive system for creating notes based on learned rules from user.
